# project-7thsem

./: .gitignore  EI.npy  README.md  check_model.py  complex_shape_dataset_1.npz  e_forward.npy  pyproject.toml  traiangle_image.npy  triangle_ET.npy
checkpoints/cno_2d/: _CHECKPOINT_METADATA  _METADATA  _sharding  manifest.ocdbt
checkpoints/cno_2d/array_metadatas/: process_0
checkpoints/cno_2d/ocdbt.process_0/: manifest.ocdbt
dataLoader/: make_data.py
model_dir/: Cno_2d_model.py  activation_filter.py  model_blocks.py  model_main_blocks.py
training_dir/: metrics.csv  metrics_plot.py  train_cno.py
