[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "equinox>=0.13.2",
    "finitediffx>=0.1.0",
    "flax>=0.12.0",
    "jax[cuda12]>=0.8.0",
    "matplotlib>=3.10.7",
    "optax>=0.2.6",
    "plotly>=6.4.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]
